# doe-jang-work

./: .gitignore  LICENSE  README.en.md  README.ja.md  README.md  README.zh-CN.md  WorkStamp.entitlements  WorkStampMac.entitlements  project.yml  기획.md
MacSources/: Info.plist  MenuPopover.swift  WorkStampMacApp.swift
Sources/: ContentView.swift  Info.plist  SalaryInputView.swift  StampStore.swift  Theme.swift  WorkStampApp.swift
Sources/Shared/: CalendarView.swift  Localization.swift  StampStore.swift  Theme.swift  WorkdayCalendar.swift
WidgetSources/: Info.plist  WorkStampWidget.swift
cli/: README.md  pyproject.toml  workstamp.py
cli/workstamp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: build-mac-dmg.sh
